--- a/scrolling/src/App.scss
+++ b/scrolling/src/App.scss
@@ -3,19 +3,15 @@ body {
   height: 100%;
 }
 
-body {
-  overscroll-behavior-y: none;
+* {
+  box-sizing: border-box;
 }
 
-h2 {
-  text-align: center;
-  font-size: 8rem;
-  margin: 40px auto;
-  .outline {
-    -webkit-text-stroke: 1px black;
-    -webkit-text-fill-color: white;
-  }
+body {
+  overscroll-behavior-y: none;
+  background-color: #f3f3f3;
 }
+
 
 .App {
   position: fixed;
@@ -33,15 +29,12 @@ h2 {
     height: 66vw;
     overflow: hidden;
     position: relative;
-    margin: 400px auto;
+    margin: 15vw auto 5vw auto;
     display: flex;
     justify-content: center;
     align-items: center;
     &:nth-child(1) {
-      margin-top: 200px;
-    }
-    &:last-child {
-      margin-bottom: 200px;
+      margin-top: 15vw;
     }
     @media (max-width: 480px) {
       width: 95vw;
@@ -50,6 +43,30 @@ h2 {
     img {
       width: 100%;
       position: absolute;
+    }
+  }
+  .caption {
+    margin-left: auto;
+    margin-right: 16.5vw;
+    padding-top: 0.5em;
+    width: max-content;
+    border-top: 2px solid black;
+    display: flex;
+    justify-content: right;
+    flex-direction: column;
+    @media (max-width: 480px) {
+      width: 47.5vw;
+      margin-right: 2.5vw;
+    }
+    h2, h3 {
+      display: block;
+      font-size: clamp(0.75rem, 1vw, 1rem);
+      letter-spacing: -0.05em;
+      margin: 0;
+      span {
+        font-weight: 300;
+        display: block;
+      }
     }
   }
 }
